# pos

./: .eslintrc.js  .gitignore  README.md  npm-install-log.txt  package-lock.json  package.json  pnpm-workspace.yaml  superAdminLogin.txt  temp-debug.js  temp-debug.mjs  tsconfig.base.json  tsconfig.desktop.json  tsconfig.next.json  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  commit-check.yml
.husky/: pre-commit
apps/android/: capacitor.config.ts  next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/backend/: Dockerfile  docker-compose.yml  mongo-client-stub.cjs  next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/desktop/: index.html  package.json  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: main.rs
docs/: AI.md  AI_Prompt_Library.md  API.md  Architecture.md  Business_Rules.md  Coding_Standards.md  Configuration_System.md  Database.md  Design_System.md  Development_Plan.md  Error_Catalog.md  Event_Catalog.md  Hardware.md  Implementation_Pipeline.md  Notifications.md  PRD.md  Permission_Matrix.md  Project_Structure.md  REDESIGN.md  Reports.md  Security.md  State_Machines.md  Sync Architecture.md  Testing.md  UI_UX.md  Vision.md
plan/: DEPENDENCIES.md  EXECUTION_RULES.md  MASTER_INDEX.md  PROJECT_ROADMAP.md  clean_node_modules.js
scripts/: check-schema.mjs  check-schema2.mjs  check-subs.mjs  dev-ui.mjs  fix-cashier-permissions.mjs  seed-demo-data.mjs  seed-subscription.mjs  seed-superadmin.mjs
(+454 files in other folders)
