[package]
name = "smart-retail-os"
version = "0.1.0"
description = "Smart Retail OS — Desktop Shell"
authors = ["Smart Retail OS Team"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "dialog-open",
  "dialog-save",
  "fs-read-file",
  "fs-write-file",
  "fs-read-dir",
  "fs-create-dir",
  "fs-remove-dir",
  "fs-remove-file",
  "fs-rename-file",
  "fs-copy-file",
  "path-all",
  "protocol-asset"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
